# ZsxqCrawler

./: .gitignore  AGENTS.md  MIGRATION_COMPLETE.md  OPTIMIZATION_PLAN.md  README.md  a_share_analysis_db_storage.py  a_share_analysis_service.py  a_share_routes.py  account_routes.py  ai_provider_config.py  analyze_a_share_companies.py  columns_routes.py  core_routes.py  crawl_routes.py  daily_analysis_routes.py  daily_topic_analysis_service.py  db_path_manager.py  file_ai_analysis_service.py  file_routes.py  group_routes.py  main.py  media_routes.py  pyproject.toml  runtime_helpers.py  settings_routes.py  smoke_a_share_extraction.json  task_routes.py  tdx_a_share_export_service.py  tmp_stock_analysis_missing_45.json  tmp_stock_analysis_remaining_35_concurrency5.json  topic_routes.py  zsxq_database.py  zsxq_file_database.py  zsxq_file_downloader.py  zsxq_interactive_crawler.py
backend/: main.py
docs/: a-share-pool-rotation-diagnostic-plan.md  a-share-recommendation-pool-checkpoint-plan.md  a-share-recommendation-prompt-tuning-plan.md  a-share-research-dataset-plan.md  a-share-run-date-range-plan.md  architecture-optimization-followup-plan-20260620.md  architecture-optimization-plan-20260620.md  backend_shutdown_task_cleanup_plan.md  daily-stock-concept-signal-taxonomy-plan.md  file-download-runtime-fix-plan.md  file-download-task-dock-plan.md  group_scope_audit.md  group_sidebar_context_actions_plan.md  high-priority-backend-page-optimization-plan.md  module-refactor-execution-plan-20260610.md  official-topic-crawl-flow-plan.md  postgres_compat_deprecation_plan.md  postgres_content_table_semantics_audit.md  postgres_core_group_id_backfill_report.md  postgres_core_migration_report.md  postgres_core_reader_usage.md  postgres_ingestion_write_order_review.md  postgres_legacy_archive_report.md  postgres_legacy_schema_drop_plan.md  postgres_migration_smoke.md  postgres_real_cutover_probe_report.md  postgres_real_migration_report.md  postgres_shared_database_plan.md  postgres_status_report.md  project-architecture-roadmap.md  stock-topic-analysis-tab-plan.md  systematic-refactor-plan-20260611.md  task-launch-module-depth-plan.md  task-list-residual-task-handling-plan.md  web_high_priority_optimization_plan.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js
scripts/: analyze_a_share_companies.py  analyze_download_ua_log.py  artifact_paths.py  audit_a_share_local_storage.py  audit_postgres_content_table_semantics.py  audit_postgres_migration.py  backfill_a_share_analysis_to_core.py  backfill_postgres_core_group_ids.py  check_scratch_artifacts.py  cleanup_postgres_legacy_artifacts.py  csv_chart_server.py  diagnose_stock_concept_taxonomy.py  download_analysis_ready_files.py  export_a_share_research_dataset.py  export_daily_review_topics.py  export_external_stock_summary.py  generate_a_share_pool_rotation_report.py  generate_postgres_legacy_archive_report.py  generate_postgres_migration_report.py  generate_postgres_status_report.py  inspect_postgres_activity.py  manage_postgres_core_access.py  manage_postgres_core_schema.py  manage_postgres_public_schema.py  migrate_accounts_to_sql.py  migrate_postgres_schemas_to_core.py  migrate_sqlite_to_postgres.py  probe_zsxq_cli_topics.py  probe_zsxq_mcp_import_coverage.py  probe_zsxq_mcp_range_pull.py  probe_zsxq_mcp_topics.py  register_retention_cleanup_task.ps1  run_a_share_pool_rotation_grid.py  run_a_share_recommendation_pool_rotation.py  run_a_share_research_return_smoke.py  run_daily_topic_report.ps1  run_postgres_core_smoke.ps1  run_postgres_real_cutover_probe.py  run_postgres_real_migration_drill.py  run_postgres_runtime_cutover_smoke.ps1  (+12 more)
tests/: test_a_share_analysis_checkpoint.py  test_a_share_analysis_db_storage_helpers.py  test_a_share_analysis_reset.py  test_a_share_analysis_run_plan.py  test_a_share_analysis_service_helpers.py  test_account_context.py  (+130 more)
(+385 files in other folders)
