[project]
name = "knowledge-planetb"
version = "0.1.0"
description = "知识星球数据爬取和管理工具"
authors = [
    {name = "46", email = ""},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "tomli>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "faster-whisper>=1.1.1; python_version >= '3.9'",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "pypdf>=5.4.0",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
