[project]
name = "knowledge-planetb"
version = "0.1.0"
description = "知识星球数据爬取和管理工具"
authors = [
    {name = "46", email = ""},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "tomli>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "faster-whisper>=1.1.1",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "pypdf>=5.4.0",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
zsxq-api = "backend.main:run_server"
zsxq-crawler = "backend.crawlers.zsxq_interactive_crawler:main"
a-share-analysis = "scripts.analyze_a_share_companies:main"
csv-chart-server = "scripts.csv_chart_server:main"
migrate-accounts = "scripts.migrate_accounts_to_sql:migrate_accounts"
manage-postgres-core-schema = "scripts.manage_postgres_core_schema:main"
migrate-postgres-schemas-to-core = "scripts.migrate_postgres_schemas_to_core:main"
manage-postgres-public-schema = "scripts.manage_postgres_public_schema:main"
generate-postgres-status-report = "scripts.generate_postgres_status_report:main"
verify-postgres-reader-access = "scripts.verify_postgres_reader_access:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "scripts"]

[dependency-groups]
dev = []
