[project]
name = "knowledge-planetb"
version = "0.1.0"
description = "知识星球数据爬取和管理工具"
authors = [
    {name = "46", email = ""},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "tomli>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "faster-whisper>=1.1.1",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "pypdf>=5.4.0",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
zsxq-api = "backend.main:run_server"
a-share-analysis = "scripts.analyze_a_share_companies:main"
csv-chart-server = "scripts.csv_chart_server:main"
migrate-accounts = "scripts.migrate_accounts_to_sql:migrate_accounts"
manage-postgres-core-schema = "scripts.manage_postgres_core_schema:main"
backfill-postgres-core-group-ids = "scripts.backfill_postgres_core_group_ids:main"
backfill-a-share-analysis-to-core = "scripts.backfill_a_share_analysis_to_core:main"
export-a-share-research-dataset = "scripts.export_a_share_research_dataset:main"
run-a-share-research-return-smoke = "scripts.run_a_share_research_return_smoke:main"
run-a-share-recommendation-pool-rotation = "scripts.run_a_share_recommendation_pool_rotation:main"
manage-postgres-core-access = "scripts.manage_postgres_core_access:main"
cleanup-postgres-legacy-artifacts = "scripts.cleanup_postgres_legacy_artifacts:main"
generate-postgres-status-report = "scripts.generate_postgres_status_report:main"
verify-postgres-reader-access = "scripts.verify_postgres_reader_access:main"
verify-postgres-writer-access = "scripts.verify_postgres_writer_access:main"
run-postgres-real-cutover-probe = "scripts.run_postgres_real_cutover_probe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "scripts"]

[dependency-groups]
dev = []
